# dapr-wasmedge-rs

./: README.md  compie.sh  home.html  run.sh
app/: Cargo.toml  link-error.txt
app/src/: main.rs
static/: _buildManifest.js  home.html  index.js
