[package]
name = "app"
version = "0.1.0"
authors = ["yukang <moorekang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
log = "0.4.1"
httparse = "1.3.4"
http = "0.2.0"
twoway = "0.2.1"
tokio-util = { version = "0.6", optional = true, features= ["codec"] }
mime_guess = {version = "2.0.1", optional = true}
thiserror = "1.0"
pin-project = "1.0"
warp = "0.3"
mime = "0.3.16"
headers = "0.3.2"
criterion = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
mpart-async = "0.5.0"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
pretty_env_logger = "0.4"
wasmedge_tensorflow_interface = "^0.2.0"
